--- a/index.html
+++ b/index.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html>
-<!-- 57942-87377-28056-72252-81070-73810-88032-28266-77510-84375-28392-76501-82038-81480-75480-38136 -->
-<html>
-<head>
-		<div class="navbar"><p>Hello! Welcome to the new and improved WORLD WIDE WEB! EVERY COLOR HUMANLY POSSIBLE AND AS MANY IMAGES AS POSSIBLE WILL BE UTILISED!</p></div>
-		<script>
-		</script>
-		<style>
-			.imagebanner {
-				position: fixed;
-				top: 0%;
-				left: 0%;
-				width: 100%;
-			}
-			.navbar {
-	width: 100%;
-	height: 40px;
-	position: fixed;
-	left: 0%;
-	z-index: 100;
-	box-shadow: 0px 1px 10px;
-	top: 0%;
-	background-color: whitesmoke;
-	-webkit-box-shadow: 0px 5px 29px;
-			}
-		</style>
-	</head>
-<body>
-	
-<div id="standinimg" style="width:  100%; position: absolute; z-index: 10; top: 0%; left: 0%;"></div>
-		<img src="bg.png" class="imagebanner" id="imgbanner" alt="ParsonCoin banner">
-		<div style="top: 100%; height:  40%; z-index: 10; background-color: antiquewhite; position: absolute; left: 0%;"><p>first transaction</p><p>50 Parsons for an orange!</p> <p>96-222-372-524-210-672-777-1032-378-1180-1331-1308-1391-1652-630-1792-1819-2232-2261-2220-2604-2750-966-3096-2775-3224-2997-1176-3654-3420-3844-3552-3531-4284-3885-4320-4107-4180-2223-4560-4387-5208-5117-4884-4950-1932-5405-5760-2058-6300-5814-5772-2226-6426-5885-6552-6555-6960-6667-2520-7381-6944-2646-8064-7410-7590-8375-2856-8694-8680-7597-8640-9125-7918-8175-9576-8855-9438-9480-4480</p><div>
-		<div style="top: 100%; height:  60%; z-index: 10; background-color: lightpink; position: absolute; left: 0%; width: 100%;"><img src="eth.png" width="5%;" alt="ETH logo"> <p>The Parson Dissaproves</p></div>
-		<div style="top: 160%; height:  60%; z-index: 10; background-color: cadetblue; position: absolute; left: 0%; width: 100%;"> <p>Only Cryptocurrency using the new lingua-franca AND BRAND NEW ENCRYPTION METHODS</p>
-	</div>
-		<div style="top: 220%; height:  10000%; z-index: 10; background-color: gray; position: absolute; left: 0%; width: 100%;"><p>ParsonCoin is excited to announce that it is launching this July!</p> <p style="position: absolute; top: 50% ">You scrolled down this far? There's nothing down here :)</p><p style="position: absolute; top: 75% ">Hey, kindly stop scrolling.</p><p style="position: absolute; top: 80% ">The future of the human race, the colorful world wide web is asking politely! Heed its warning!</p><p style="position: absolute; top: 95% ">79-252-333-496-600-642-826-336-702-1070-1309-1440-1391-1764-1725-1936-2040-756-2033-2280-2331-2354-2530-1296-1050-2860-3267-1176-3480-3630-3906-1344-3597-4114-4200-4536-4255-4560-4953-4440-2296</p><p style="position: absolute; bottom: 0;">55278-32683-79492-28098-83750-84546-77280-79414-79532-28350-72332-79886-77970-86912-75480-38136-28644-56689-33516-80830-80948-28854-77744-76479-86940-29022-79580-83160-29148-75755-84216-83640-87948-74793-76300-88326-29484-90687-80960-88830-80484-29694-75756-85080-93010-86031-85440-79143-29988-92235-81624-86757-30156-92751-77040-86520-90972-90375-30408-77575-87120-90875-93912-80919-90520-91375-30744-78431-91750-30870-92000-89177-89298-88680-31080-79287-92750-31206-61752-31290-81314-79929-89760-41944-31500-62333-94752-36897-94250-42280-42336-42392-31836-83490-87400-85232-85344-84693-94736-84915-91920-96642-32256-87666-85470-95604-85692-43288 Copyright ParsonCoin © 1999
-			</p></div>
-</body>
+<style>
 
-<!-- 55278-32683-79492-28098-84420-83204-88032-77395-80880-76275-28392-85302-82038-28518-76160-78315-81840-75130-28728-73295-28812-85875-73616-77168-76590-29022-84424-81774-74258-75755-77256-29274-90042-79686-77700-86924-77922-29526-58432-29610-76954-75649-84960-29778-89460-76077-84016-83421-29988-90090-86636-30114-94058-86999-91440-30282-93138-83145-91224-82650-87846-92329-91728-30618-91980-83334-81252-87227-30828-86730-84640-92125-92988-82029-88800-85215-89040-83959-31992 -->
-</html>
+	.buttonclass {
+	height: 100%;
+	border-style: none;
+	left: 0%;
+	background-color: #353535;
+	color: whitesmoke;
+  }	
+
+  .buttonclass :hover {
+	background-color: #3C6E71;
+  }
+  .imgbanner {
+	top: 0%;
+	position: fixed;
+	z-index: -1;
+	width:  100%;
+	left: 0%;
+	
+  }
+  .centeredtext {
+	  width: 100%;
+	  text-align: center;
+	  font-size: 500%;
+	  position: absolute;
+	  top: 25%;
+	  color: whitesmoke;
+  }
+  .centeredtext2 {
+	  width: 100%;
+	  text-align: center;
+	  font-size: 200%;
+	  position: absolute;
+	  top: 37%;
+	  color: whitesmoke;
+  }
+  .soulcards {
+	  width: 14%;
+	  z-index: 100;
+	  
+  }
+</style>
+<!-- 89-240-333-168-550-642-917-336-1134-1140-1221-504-1586-1498-1860-2000-2057-2160-2375-840-2709-2530-2714-2832-1050-3224-2997-3528-3683-3720-3720-1344-3564-4318-4410-1512-4699-4560-4914-4600-4838-1764-5418-5016-4995-5520-1974-6048-5586-5550-6681-2184-6572-5994-6545-5992-6555-6960-2478-6420-2562-7068-8001-8000-7605-2772-8107-7616-2898-8820-8094-7992-8395-9176-3150-8512-9317-9672-9401-8880-10044-3444-10375-9324-10030-11008-9657-11000-4984 -->
+<!-- ShySupreme's image. Stored but not displayed out of respect for the parsimonious. -->
+<img style="display: none;" src="shysupreme.png">
+<div style="background-color: #353535; position: fixed; width: 100%; z-index: 100; top: 0%; height: 5%; left: 0%; box-shadow: 0px 2px 4px;" ><button class="buttonclass"> Home </button> <button class="buttonclass"> Join the Soulcrypted Program! </button> <a href="https://discord.gg/37JZpKgexv"><button class="buttonclass" > Discord </button></a> <a href="https://www.reddit.com/r/ParsimoniousParsons/"><button class="buttonclass"> Reddit</button></a></div>
+<h1 class="centeredtext">PARSONCOIN LLC.</h1>
+<h2 class="centeredtext2">Encryption done right (© 2001)</h2>
+<img src="wallpaper.jpg"  class = "imgbanner">
+<hr />
+<div style="position:absolute; bottom: -50%; left: 0%; background-color: black; box-shadow: 0px -2px 4px; width: 100%;"> 
+<div class= "b" style=" background-color:#3C6E71; color: white; position: absolute; z-index: 10; top: 0%; height: 400px;">
+<h2>Where Does ParsonCoin LLC. Get its Name?</h2>
+<p>Founded on Sept. 4, 1984, the <strong>Parsons</strong> were a historical cult in which the <strong>godess of Parsimony</strong> was worshipped. This cult died when a great fire engulfed their meeting place on Oct. 5, 1894 (See <a href="%20https;//youtube.com">the Parsimonious Fire of '84</a>). The cult was short-lived by all accounts. The main contribution to society that this cult is attributed to is the massive advancements it made in the realms of cryptography and encryption. The modern world of cryptocurrency could not exist without the Parsons of the goddess of Parsimony.</p>
+<h2>What is the ParsonCoin LLC's Mission?</h2>
+<p>Named after such a historical institution with ties to some of the greatest advancements in human history, we strive to make innovations like the Parsons did. Following in their footsteps our <strong>encryption department</strong> strives to find indecipherable encryption methods to allow for the most sensitive and personal information to be stored in our databases.</p></div>
+<div class= "b" style="position:absolute; height: 800px; width: 100%; top: 400px; color:white; background-color: #325D6A ; z-index: 10; left: 0%;">
+<h2>Soul Cards</h2>
+<p><strong>Soul cards</strong> allow anyone to show off a completely unique image of themself to the world. Encrypted with the finest technology, these serve as the ultimate internet identification. Every one is unique to it's holder! Here are some examples of soul cards:</p></div>
+<img src="HAL.png" style="position: absolute; top: 600px; right: 30%;" class="soulcards"/><img src="humlan.png" class="soulcards" style="position: absolute; top: 600px; right: 0%;"/><img src="outsider.png" class="soulcards" style="position: absolute; top: 600px; left: 30%;" /><img src="pdphun.png" style="position: absolute; top: 600px;" class="soulcards" /></div>
+<div class= "b" style="left: 0%; color: white; position: absolute; bottom: -2000px; height: 400px; background-color: #284B63; z-index: 200;">
+<h2>Our Vision</h2>
+<p>ParsonCoin LLC. believes that encryption is vitally important for the future of the human race. If hypothetically there is somehow a <strong>cataclysmic global event</strong> that wipes out organic life as we know it on earth, we would like to have a digital archive of all corporately adequate human beings to continue the human race in digital form.</p>
+</div>
+</div>
